1998-12-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.[ch]: Misc. updates to accomodate the new rendering
	and propagation model.
	* gnome-canvas-rect-ellipse.c: Likewise.
	* gnome-canvas-image.c: Likewise.
	* gnome-canvas-text.c: Likewise.
	* gnome-canvas-line.c: Likewise.
	* gnome-canvas-polygon.c: Likewise.
	* gnome-canvas-widget.c: Likewise.
	* gnome-icon-item.c: Likewise.

1998-12-16  Yukihiro Nakai <Nakai@abricot.co.jp>

	* Added gtkrc.ja. The original gtkrc is not good for
	the multi-byte users.

1998-12-16  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock-item.c (gnome_dock_item_detach): Set the "transient
	for" hint properly.
        (gnome_dock_item_map_event): Do the `dock_item_detach()' hack
 	only if we are actually floating.

1998-12-16  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-dock-item.c (gnome_dock_item_realize): set transient for
	the floating window so that it gets minimized with the dock-item's
	toplevel (usually a GnomeApp).

1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* gnome-rootwin.[ch]: Removed this before the freeze.

1998-12-15  Havoc Pennington  <hp@pobox.com>

	* gnome-popup-menu.c (gnome_popup_menu_new): Set global variable
	for use by connect function.
	(popup_connect_func): Attach a pointer to the toplevel menu shell
	to each menu item.
	(popup_marshal_func): Get pointer to toplevel shell, instead of
	immediate parent.

1998-12-15  Havoc Pennington  <hp@pobox.com>

	* gnome-dock-item.h: Change GNOME_DOCK_ITEM_BEH_NEVER_DETACH 
	to GNOME_DOCK_ITEM_BEH_NEVER_FLOATING for Ettore; add
	GNOME_DOCK_ITEM_BEH_LOCKED. 

	* gnome-dock-item.c: Reflect name changes and new flag.

	* gnome-app.c (gnome_app_set_toolbar): GNOME_DOCK_ITEM_BEH_LOCKED 
	instead of NEVER_DETACH
	(gnome_app_set_menus): Same

	* dock_demo.c (main): Same	
	
1998-12-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: clone apps layout whenever possible.
	(gnome_mdi_set_mode): optimized things a bit. also